portolio gap reduced and faq fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2820,6 +2820,18 @@ textarea {
   -o-border-radius: 0 164px 20px 0;
   z-index: -1;
 }
+.portfolio_margin{
+  margin-top: 150px;
+}
+@media (max-width: 576px) {
+  .portfolio__wrapper::before {
+    width: 100%;
+    height: 230px;
+  }
+  .portfolio_margin{
+    margin-top: 50px;
+  }
+}
 @media only screen and (min-width: 1400px) and (max-width: 1700px), only screen and (min-width: 1200px) and (max-width: 1399px) {
   .portfolio__wrapper::before {
     width: 1108px;
